# CourseDesignTasks

./: CMakeLists.txt  variable_normalise.h
codes/: code1.c  code2.c
include/: ast.h  ast_parser.h  ast_serial.h  edit_distance.c.h  std_token.h
src/: ast.c  ast_parser.c  ast_serial.c  edit_distance.c  variable_normalize.c
tests/: test1.c  test_ast.c
